// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should not allow to render html text 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar">
    <button
      type="button"
      class="van-picker__cancel van-haptics-feedback"
    >
      Cancel
    </button>
    <button
      type="button"
      class="van-picker__confirm van-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  <div
    class="van-picker__columns"
    style="height: 264px;"
  >
    <div class="van-picker-column">
      <ul
        style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
        class="van-picker-column__wrapper"
      >
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="van-picker-column__item van-picker-column__item--selected"
        >
          <div class="van-ellipsis">
            &lt;div&gt;option&lt;/div&gt;
          </div>
        </li>
      </ul>
    </div>
    <div
      class="van-picker__mask"
      style="background-size: 100% 110px;"
    >
    </div>
    <div
      class="van-hairline-unset--top-bottom van-picker__frame"
      style="height: 44px;"
    >
    </div>
  </div>
</div>
`;

exports[`should render bottom toolbar when toolbar-position is bottom 1`] = `
<div class="van-picker">
  <div
    class="van-picker__columns"
    style="height: 264px;"
  >
    <div class="van-picker-column">
      <ul
        style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
        class="van-picker-column__wrapper"
      >
      </ul>
    </div>
  </div>
  <div class="van-picker__toolbar">
    <button
      type="button"
      class="van-picker__cancel van-haptics-feedback"
    >
      Cancel
    </button>
    <button
      type="button"
      class="van-picker__confirm van-haptics-feedback"
    >
      Confirm
    </button>
  </div>
</div>
`;
